[package]
name = "ibc-proto"
version = "0.1.0"
authors = ["Greg Szabo <greg@informal.systems>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/informalsystems/ibc-proto/tree/master/ibc_proto"
readme     = "../README.md"
categories = ["cryptography", "cryptography::cryptocurrencies", "database"]
keywords   = ["blockchain", "bft", "consensus", "cosmos", "tendermint", "ibc", "proto"]

description = """
    ibc-proto is a the Rust implementation of the Cosmos SDK proto structs.
    """

[package.metadata.docs.rs]
all-features = true

[dependencies]
prost = { version = "0.6.1" }
prost-types = { version = "0.6.1" }

[build-dependencies]
prost-build = { version = "0.6.1" }
walkdir = { version = "2.3.1" }
